# prompt_or_gtfo_iv

./: .env.template  README.md  exploit_analysis.json  pyproject.toml  result2.txt
1-analyze-intelligence/: result.json
1-analyze-intelligence-url/: 1-analyze-intelligence-url.py
1-extract/: 1-extract-with-langchain.py
2-analyze-intelligence-pdf/: 2-analyze-intelligence-pdf.py  result.json
3-analyze-exploit/: 3-analyze-exploit.py  README.md  test_exploit_analyzer.py
4-craft-detection/: 4-craft-detection.py
4-craft-detection/result/: detection_application_ghost_application_log_-_unexpected_file_reads_outside_theme_assets_or_log_entries_containing_traversal_sequences.yml  detection_behavioral_repeated_directory_traversal_variants_against_assetsbuilt_from_single_source_brute-force_traversal_probe.yml  detection_detect_path_traversal_attempts_in_http_requests.yml  detection_detect_repeated_traversal_attempts_in_application_logs.yml  detection_detect_sensitive_file_access_in_application_logs.yml  detection_detect_suspicious_file_access_patterns.yml  detection_detect_unusual_200_responses_on_assets_endpoint.yml  detection_file_access_monitoring_for_sensitive_files.yml  detection_host_suspicious_file_reads_to_sensitive_config_files_by_webservernode_process_auditdsysmon.yml  (+3 more)
5-langgraph-phish-url-analyzer/: README.md  phish_url_analyzer.py  result.json  test_phish_url_analyzer.py
6-attack-mapping/: 6-attack-mapping.py  result.txt
data/: enterprise_attack_subtechniques.json  exploit_CVE-2023-32235.py
lib/: extract.py  fetch.py
(+1 files in other folders)
